added next button

--- a/ScoresbyFarms/contact_us.html
+++ b/ScoresbyFarms/contact_us.html
@@ -61,6 +61,12 @@
             
         </div>
     </section>
+    <section id="next">
+        <a href="our_story.html" class="previous">&laquo; Previous</a>
+        <a href="index.html" class="next">Next &raquo;</a>
+    </section>
+    
+
     <footer>
         <section ID="footer_grid">
             <img id="footer_logo" src="images/logo128.png" alt="ScoresbyFarms Logo">
@@ -86,7 +92,6 @@
     </footer>
     </section>
 </body>
-
 
 
 
