--- a/ScoresbyFarms/index.html
+++ b/ScoresbyFarms/index.html
@@ -62,8 +62,10 @@
                 </p>
             </section>
         </div>
-
-
+        <section id="next">
+        <a href="our_story.html" class="previous">&laquo; Previous</a>
+        <a href="contact_us.html" class="next">Next &raquo;</a>
+        </section>
         <footer>
             <section ID="footer_grid">
                 <img id="footer_logo" src="images/logo128.png" alt="ScoresbyFarms Logo">
@@ -88,6 +90,7 @@
             </section>
         </footer>
     </section>  
+
 
 </body>
 
