--- a/ScoresbyFarms/our_story.html
+++ b/ScoresbyFarms/our_story.html
@@ -53,6 +53,10 @@
                 Eric and Sheila Scoresby started simple by growing corn on a small field they had recently acquired, they sold this corn on the corner of main street, when they started out things were slow going but it was steady income and it was working well, The Scoresby’s Enjoyed the business and found they had great success with it so they decided to try and grow things bigger, they rented a building in Idaho Falls and began selling their corn out of there and making fresh baked goods to sell as well, but things didn’t go as planned. Making baked goods was too much work for their small family, but without the extra products they wouldn’t be making any money because renting the building was too expensive. They decided to keep working hard and trying to bring more business in but they couldn’t afford to so they decided on a plan, they bought a tent and rented a space next to the highway. That year they opened the fruit stand, at this point their children were involved and helped with just about everything from picking to managing the stand. They ended up closing their business in town and stuck with the fruit stand it was easy to pack up and was more flexible. They also decided to stop selling baked goods as they would be in the hot sun all day and they worried about them spoiling. They continue to open each year and sell great farm fresh produce even today!
             </p>
         </section>
+        <section id="next">
+        <a href="index.html" class="previous">&laquo; Previous</a>
+        <a href="contact_us.html" class="next">Next &raquo;</a>
+        </section>
 
         <footer>
             <section ID="footer_grid">
@@ -78,6 +82,7 @@
             </section>
         </footer>
     </section>
+
 </body>
 
 
