fixed HTML validaton

--- a/ScoresbyFarms/index.html
+++ b/ScoresbyFarms/index.html
@@ -11,7 +11,7 @@
 
 
 <body>
-    <section id="content">
+    <div id="content">
 
         <header>
             <section id="header_content">
@@ -33,39 +33,39 @@
             <h2 id="hero_title"> Welcome to ScoresbyFarms</h2>
         </section>
 
-        <section id="main_msg">
+        <div id="main_msg">
             <img src="images/circle_of_veggies.jpg" alt="A circle of veggies">
             <p>
                 Here at Scoresby Farms, we believe in supporting each other that means we not only sell our own fresh produce, but we also bring you local produce from farmers across Idaho Falls and even Utah. Our main three products we bring in or grow ourselves is Corn, Peaches, and Potatoes. We sell a large variety of fruits and vegetables at great prices. Some of our other products include everything from strawberries, raspberries, apples, zucchini, many varieties of squash once fall hits, and many types of peppers.
             </p>
-        </section>
+        </div>
 
 
 
         <div id="produce">
-            <section id="corn">
-                <img src="images/Corn.jpg">
+            <div id="corn">
+                <img src="images/Corn.jpg" alt="image of a corn field">
                 <p>
                     Our Corn is a sweet white and yellow mix. We have been perfecting it for 30+ years and are happy to say that it is some of the best corn Idaho Falls. It is great as a side dish for dinner or served all by itself.
                 </p>
-            </section>
-            <section id="peaches">
-                <img src="images/Peaches.jpg">
+            </div>
+            <div id="peaches">
+                <img src="images/Peaches.jpg" alt="image of peaches">
                 <p>
                     Our Peaches come from a local orchard in the Boise Valley, and we sometimes bring in famous Utah Peaches. These make a great addition to the kitchen as they are great for pies, syrups and are excellent canners. Our Peaches are Juicy and Tasty, a great treat all by themselves.
                 </p>
-            </section>
-            <section id="potatoes">
-                <img src="images/Potatos.jpg">
+            </div>
+            <div id="potatoes">
+                <img src="images/Potatos.jpg" alt="image of potatos">
                 <p>
                     We grow our own Red, Yukon Gold, and recently Huckleberry Gold Potatoes. We also bring in Burbank Russets after they harden up, so they last through the winter. These Potatoes are great for Baking, Mashing, and just about anything you can think of. I personally love making French Fries with our Delicious Burbank’s because they make long fries that are crunchy and with a soft interior.
                 </p>
-            </section>
+            </div>
         </div>
-        <section id="next">
+        <div id="next">
         <a href="our_story.html" class="previous">&laquo; Previous</a>
         <a href="contact_us.html" class="next">Next &raquo;</a>
-        </section>
+        </div>
         <footer>
             <section ID="footer_grid">
                 <img id="footer_logo" src="images/logo128.png" alt="ScoresbyFarms Logo">
@@ -84,12 +84,12 @@
                         <img src="images/googlemaps.jpg" alt="Google Maps">
                     </a>
                     <a href="site-plan-scoresbyfarms.html">
-                        <img id="siteplan_img"src="images/SitePlan_Img.png" alt="Site-Plan">
+                        <img id="siteplan_img" src="images/SitePlan_Img.png" alt="Site-Plan">
                     </a>        
                 </nav>
             </section>
         </footer>
-    </section>  
+    </div>  
 
 
 </body>
