--- a/ScoresbyFarms/contact_us.html
+++ b/ScoresbyFarms/contact_us.html
@@ -24,13 +24,13 @@
         </section>
     </header>
         <h2 id="Banner"> Contact Us</h2>
-    <section id="info_box">
-        <img id="img1" src="images/contact_us.jpg">
+    <div id="info_box">
+        <img id="img1" src="images/contact_us.jpg" alt="contact us written on blocks">
         <p id="info">
             We regret to inform you that our fruit stand does not have a phone. The best way to reach us is by visiting the stand in person. We welcome conversations and encourage you to share any concerns or feedback. Your satisfaction is important to us, and we are eager to work with you to address any issues you may have. Thank you for your understanding and support!
         </p>
-        <section id="hours">
-            <h1>Hours</h1>
+        <section id="contact_us_hours">
+            <h2>Hours</h2>
             <p>
                 Wednesday - Saturday 
             </p>
@@ -38,20 +38,20 @@
                 8am - 7pm
             </p>
         </section>
-    </section>  
+    </div>  
     <section id="email_form">
         <h2 id="email_banner"> Sign Up For our Email List</h2>
         <p>
             Stay connected with Scoresby Farms by signing up for our weekly email list! Joining is your ticket to a virtual stroll through our fruitful fields every week. Receive timely updates on the freshest produce available at the Fruit Stand, our operating hours for the week, and any weather-related closures due to rain. Stay in the loop and let the bountiful beauty of Scoresby Farms come directly to your inbox. Sign up today to ensure you never miss a moment of our farm-fresh goodness!
         </p>
         <div id="email_info">
-            <img src="images/text_bubble.jpg">
+            <img src="images/text_bubble.jpg" alt="text bubble">
             <div id="feedback"></div>
-            <form id="form"action="/my-handling-form-page" method="post">
+            <form id="form" action="/my-handling-form-page" method="post">
                 <ul>
                     <li>
                       <label for="mail">Email:</label>
-                      <input type="email" id="mail" name="user_email" />
+                      <input type="email" id="mail" name="user_email" >
                     </li>
                   </ul>
                   <li class="button">
@@ -61,10 +61,10 @@
             
         </div>
     </section>
-    <section id="next">
+    <div id="next">
         <a href="our_story.html" class="previous">&laquo; Previous</a>
         <a href="index.html" class="next">Next &raquo;</a>
-    </section>
+    </div>
     
 
     <footer>
@@ -85,33 +85,30 @@
                     <img src="images/googlemaps.jpg" alt="Google Maps">
                 </a>
                 <a href="site-plan-scoresbyfarms.html">
-                    <img id="siteplan_img"src="images/SitePlan_Img.png" alt="Site-Plan">
+                    <img id="siteplan_img" src="images/SitePlan_Img.png" alt="Site-Plan">
                 </a>        
             </nav>
         </section>
     </footer>
     </section>
+    <script>
+        // get the feedback div element so we can do something with it.
+        const feedbackElement = document.getElementById('feedback');
+        // get the form so we can read what was entered in it.
+        const formElement = document.forms[0];
+        // add a 'listener' to wait for a submission of our form. When that happens run the code below.
+        formElement.addEventListener('submit', function(e) {
+            // stop the form from doing the default action.
+            e.preventDefault();
+            // set the contents of our feedback element to a message letting the user know the form was submitted successfully. Notice that we pull the name that was entered in the form to personalize the message!
+            feedbackElement.innerHTML = 'Thank you for Joining the Email List!';
+            // make the feedback element visible.
+            feedbackElement.style.display = "block";
+            // add a class to move everything down so our message doesn't cover it.
+            document.body.classList.toggle('moveDown');
+        });
+    </script>
 </body>
 
-
-
-
-<script>
-    // get the feedback div element so we can do something with it.
-    const feedbackElement = document.getElementById('feedback');
-    // get the form so we can read what was entered in it.
-    const formElement = document.forms[0];
-    // add a 'listener' to wait for a submission of our form. When that happens run the code below.
-    formElement.addEventListener('submit', function(e) {
-        // stop the form from doing the default action.
-        e.preventDefault();
-        // set the contents of our feedback element to a message letting the user know the form was submitted successfully. Notice that we pull the name that was entered in the form to personalize the message!
-        feedbackElement.innerHTML = 'Thank you for Joining the Email List!';
-        // make the feedback element visible.
-        feedbackElement.style.display = "block";
-        // add a class to move everything down so our message doesn't cover it.
-        document.body.classList.toggle('moveDown');
-    });
-</script>
 
 </html>
