--- a/ScoresbyFarms/our_story.html
+++ b/ScoresbyFarms/our_story.html
@@ -75,7 +75,7 @@
                     <a href="https://maps.app.goo.gl/pBMeg43HBKBkzE9K7">
                         <img src="images/googlemaps.jpg" alt="Google Maps">
                     </a>
-                    <a href="site-plan-scoresbyfarms.html">
+                    <a id ="footerImg3" href="site-plan-scoresbyfarms.html">
                         <img id="siteplan_img" src="images/SitePlan_Img.png" alt="Site-Plan">
                     </a>        
                 </nav>
