--- a/ScoresbyFarms/index.html
+++ b/ScoresbyFarms/index.html
@@ -64,7 +64,7 @@
         </div>
         <div id="next">
         <a href="our_story.html" class="previous">&laquo; Previous</a>
-        <a href="contact_us.html" class="next">Next &raquo;</a>
+        <a href="our_story.html" class="next">Next &raquo;</a>
         </div>
         <footer>
             <section ID="footer_grid">
@@ -83,7 +83,7 @@
                     <a href="https://maps.app.goo.gl/pBMeg43HBKBkzE9K7">
                         <img src="images/googlemaps.jpg" alt="Google Maps">
                     </a>
-                    <a href="site-plan-scoresbyfarms.html">
+                    <a id ="footerImg3" href="site-plan-scoresbyfarms.html">
                         <img id="siteplan_img" src="images/SitePlan_Img.png" alt="Site-Plan">
                     </a>        
                 </nav>
